--- a/_posts/2024-07-04-notice.md
+++ b/_posts/2024-07-04-notice.md
@@ -7,6 +7,6 @@ tags: 站务
 top: true
 ---
 
-如果你无法访问本站，请 Bing 搜 peasoft 来使用代理。
+如果你无法访问本站，请 Bing 搜 peasoft 来使用代理或尝试访问备用镜像：<https://7327638.xyz/> (镜像站带有轻度自我审查)。
 
 据测试，`*.github.io` 已被 **遥遥领先浏览器** 屏蔽，请更换浏览器访问。Homo OS 目前无法更换浏览器，请考虑更换系统或设备。我们建议您使用 [Via](https://viayoo.com/) (Android/iOS)、[Microsoft Edge](https://www.microsoft.com/edge/download) (全平台)、[百分浏览器](https://www.centbrowser.cn/) (Windows)、[Chrome](https://google.cn/chrome/) (全平台，Android 版请从其它渠道下载) 等 **非国内大厂制作的浏览器**！这些浏览器提供了更加完善的隐私防护，具有更少的广告，并且不会随意屏蔽网址。目前已知 **QQ 浏览器、UC 浏览器、夸克浏览器** 会将您的**所有浏览记录及页面内容**进行存档并提交给政府机关进行审核。
